--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
   <section class="projects">
     <div class="project-card">
       <h3 class="project-title">Project 1</h3>
-      <p class="project-description">This is a description of project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <div class="project-card">
-      <h3 class="project-title">Project 2</h3>
-      <p class="project-description">This is a description of project 2. Nulla nec nisi non mauris laoreet commodo id ac tellus.</p>
+      <p class="project-description">Nama         : Ajeng Paramitha Juman Lovista
+                                    Kelas         : XI PPLG 2
+                                    No.Presensi   : 4
+                                    TTL           : Semarang, 29 Mei 2007
+                                    Alamat        : Jl. Hiri IV No 17, Semarang Timur
+                                    Agama         : Islam 
+                                    Jenis Kelamin : Perempuan 
+                                    Asal Sekolah  : SMKN 2 Semarang</p>
     </div>
     <div class="project-card">
       <h3 class="project-title">Project 3</h3>
@@ -90,8 +93,8 @@
   </section>
   <section class="contact-info">
     <h2>Contact Me</h2>
-    <p>Email: abiezz@example.com</p>
-    <p>Phone: +1234567890</p>
+    <p>Email: paramithaajeng7@gmail.com</p>
+    <p>Phone: +6281215468897</p>
   </section>
 </body>
 </html>
